
 ** manova (replaced by manova1)

 ** repanova (replaced by anova2)

 ** sign_test (replaced by updated signtest)

 ** tblread, tblwrite (belong to `io` package when tables are implemented)

 ** t_test, t_test_2 (deprecated: use ttest & ttest2)

 ** wilcoxon_test (replaced by ranksum)

 Available Data Sets:
 ====================

 ** acetylene         Chemical reaction data with correlated predictors
 ** arrhythmia        Cardiac arrhythmia data from the UCI machine learning repository
 ** carbig            Measurements of cars, 1970–1982
 ** carsmall          Subset of carbig. Measurements of cars, 1970, 1976, 1982
 ** cereal            Breakfast cereal ingredients
 ** examgrades        Exam grades on a scale of 0–100
 ** fisheriris        Fisher's 1936 iris data
 ** hald              Heat of cement vs. mix of ingredients
 ** heart_scale.dat   Used for SVM testing
 ** kmeansdata        Four-dimensional clustered data
 ** mileage           Mileage data for three car models from two factories
 ** morse             Recognition of Morse code distinctions by non-coders
 ** popcorn           Popcorn yield by popper type and brand
 ** stockreturns      Simulated stock returns
 ** weather           Daily high temperatures in the same month in two consecutive years


Summary of important user-visible changes for statistics 1.5.1:
-------------------------------------------------------------------

 Important Notice: 1) `mean` shadows core Octave's respective function
                   2) incompatibility with the `nan` package
 New functions:
 ==============

 ** sampsizepwr (fully Matlab compatible with extra functionality)

 ** fixvarsize (resembles MATLAB's distchck functionality)

 ** nctcdf

 Improvements:
 =============

 ** chi2test: improved functionality, handles 3-way tables

 ** evfit: fixed bug that caused an error when x is a row vector

 Removed Functions:
 ==================

 ** cloglog

 ** nanmean (replaced by mean)

 ** u_test (replaced by ranksum)